// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing example data 1`] = `
Object {
  "@context": Object {
    "@version": 1.1,
    "comments": Object {
      "@container": "@list",
      "@id": "viade:comments",
    },
    "description": Object {
      "@id": "schema:description",
      "@type": "xs:string",
    },
    "latitude": Object {
      "@id": "schema:longitude",
      "@type": "xs:double",
    },
    "media": Object {
      "@container": "@list",
      "@id": "viade:media",
    },
    "name": Object {
      "@id": "schema:name",
      "@type": "xs:string",
    },
    "points": Object {
      "@container": "@list",
      "@id": "viade:points",
    },
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "schema": "http://schema.org/",
    "viade": "http://arquisoft.github.io/viadeSpec/",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "comments": Array [
    Object {
      "@id": "http://inrupt.luispc1998/routeComments/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.angelixus/routeComments/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.raupemol/routeComments/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.luispc1998/routeComments/<comentarioConSuTipo>",
    },
  ],
  "description": "This is a test to see the output of the JsonLDConversor",
  "media": Array [
    Object {
      "@id": "http://inrupt.luispc1998/routeMedia/image/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.angelixus/routeMedia/image/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.raupemol/routeMedia/video/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.luispc1998/routeMedia/video/<comentarioConSuTipo>",
    },
  ],
  "name": "Route test 1",
  "points": Array [
    Object {
      "latitude": 45.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 46.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 47.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 48.123,
      "longitude": 32.121,
    },
    Object {
      "latitude": 49.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 40.123,
      "longitude": 32.121,
    },
    Object {
      "latitude": 50.123,
      "longitude": 33.121,
    },
    Object {
      "latitude": 53.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 54.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 55.123,
      "longitude": 35.121,
    },
    Object {
      "latitude": 55.123,
      "longitude": 34.121,
    },
  ],
}
`;

exports[`Parsing example data2 1`] = `
Object {
  "@context": Object {
    "@version": 1.1,
    "comments": Object {
      "@container": "@list",
      "@id": "viade:comments",
    },
    "description": Object {
      "@id": "schema:description",
      "@type": "xs:string",
    },
    "latitude": Object {
      "@id": "schema:longitude",
      "@type": "xs:double",
    },
    "media": Object {
      "@container": "@list",
      "@id": "viade:media",
    },
    "name": Object {
      "@id": "schema:name",
      "@type": "xs:string",
    },
    "points": Object {
      "@container": "@list",
      "@id": "viade:points",
    },
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "schema": "http://schema.org/",
    "viade": "http://arquisoft.github.io/viadeSpec/",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "comments": Array [
    Object {
      "@id": "http://inrupt.luispc1998/routeComments/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.angelixus/routeComments/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.raupemol/routeComments/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.luispc1998/routeComments/<comentarioConSuTipo>",
    },
  ],
  "description": "This is a test to see the output of the JsonLDConversor",
  "media": Array [
    Object {
      "@id": "http://inrupt.luispc1998/routeMedia/image/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.angelixus/routeMedia/image/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.raupemol/routeMedia/video/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.luispc1998/routeMedia/video/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.luispc1998/routeMedia/video/<comentarioConSuTipo>",
    },
    Object {
      "@id": "http://inrupt.luispc1998/routeMedia/video/<comentarioConSuTipo>",
    },
  ],
  "name": "Route test 2",
  "points": Array [
    Object {
      "latitude": 45.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 46.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 47.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 48.123,
      "longitude": 32.121,
    },
    Object {
      "latitude": 49.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 40.123,
      "longitude": 32.121,
    },
    Object {
      "latitude": 50.123,
      "longitude": 33.121,
    },
    Object {
      "latitude": 53.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 54.123,
      "longitude": 34.121,
    },
    Object {
      "latitude": 55.123,
      "longitude": 35.121,
    },
    Object {
      "latitude": 57.123,
      "longitude": 30.121,
    },
    Object {
      "latitude": 56.123,
      "longitude": 26.121,
    },
    Object {
      "latitude": 53.123,
      "longitude": 25.121,
    },
    Object {
      "latitude": 55.123,
      "longitude": 20.121,
    },
    Object {
      "latitude": 51.123,
      "longitude": 15.121,
    },
  ],
}
`;
